[gd_scene load_steps=8 format=3 uid="uid://cq8xqg1q1wgxp"]

[ext_resource type="Script" path="res://level.gd" id="1_uypkh"]
[ext_resource type="TileSet" uid="uid://bthpktu5fpy3m" path="res://base_tiles.tres" id="2_df7di"]
[ext_resource type="TileSet" uid="uid://c71n7ovyb0chb" path="res://highlight_tiles.tres" id="3_ilats"]
[ext_resource type="Script" path="res://HighlightMap.gd" id="4_fv11e"]
[ext_resource type="Script" path="res://CharacterManager.gd" id="4_m8tdb"]
[ext_resource type="PackedScene" uid="uid://ccrflxfdcwo3c" path="res://menu.tscn" id="7_psia6"]
[ext_resource type="Script" path="res://TurnService.gd" id="8_5tca6"]

[node name="MainService" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_uypkh")
metadata/_edit_horizontal_guides_ = [371.787]

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("2_df7di")
cell_quadrant_size = 64
format = 2
layer_0/name = "level_1"
layer_0/y_sort_enabled = true
layer_0/y_sort_origin = -40
layer_0/tile_data = PackedInt32Array(-65535, 1, 0, 1, 1, 0, -131071, 1, 0, -196607, 1, 0, -262143, 1, 0, -327679, 1, 0, -196606, 1, 0, -131070, 1, 0, -65534, 1, 0, 3, 1, 0, 65539, 1, 0, 131075, 1, 0, 196611, 1, 0, 196612, 1, 0, 262148, 196609, 0, 65538, 1, 0, 2, 1, 0, -262142, 1, 0, -327678, 1, 0, -131069, 1, 0, -65533, 1, 0, 4, 1, 0, 65540, 1, 0, 131076, 1, 0, 196613, 1, 0, -65532, 1, 0, -131068, 1, 0, -196604, 1, 0, -262141, 1, 0, -196605, 1, 0, -327675, 1, 0, -262139, 1, 0, -196603, 1, 0, -131067, 1, 0, -65531, 1, 0, 5, 1, 0, 65541, 1, 0, 131077, 1, 0, -327676, 1, 0, -262140, 1, 0, -327677, 1, 0, 262149, 196609, 0, 262147, 196609, 0, 262146, 196609, 0, 262145, 196609, 0, 196609, 1, 0, 131073, 1, 0, 65537, 1, 0, 131074, 1, 0, 196610, 1, 0, 262150, 196609, 0, 196614, 1, 0, 131078, 1, 0, 65542, 1, 0, 6, 1, 0, -65530, 1, 0, -131066, 1, 0, -196602, 1, 0, -262138, 1, 0, -327674, 1, 0, -327673, 1, 0, -262137, 1, 0, -196601, 1, 0, -131064, 196609, 0, -131065, 1, 0, -65529, 1, 0, 7, 1, 0, 65543, 1, 0, 131079, 1, 0, 196615, 1, 0, 262151, 196609, 0, 262152, 196609, 0, 65544, 196609, 0, 131080, 196609, 0, 196616, 196609, 0, 8, 196609, 0, -65528, 196609, 0, -196600, 196609, 0, -262136, 196609, 0, -327672, 196609, 0, 262144, 196609, 0, -393216, 196609, 0, 196608, 196609, 0, 131072, 196609, 0, 65536, 196609, 0, 0, 196609, 0, -65536, 196609, 0, -131072, 196609, 0, -196608, 196609, 0, -262144, 196609, 0, -327680, 196609, 0, -393215, 196609, 0, -393214, 196609, 0, -393213, 196609, 0, -393212, 196609, 0, -393211, 196609, 0, -393210, 196609, 0, -393209, 196609, 0, -393208, 196609, 0)
layer_1/name = "level_2"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 32
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(196615, 131073, 0, -393209, 131073, 0, -458745, 65537, 0, -327673, 131073, 0, -262137, 131073, 0, -196601, 131073, 0, -131065, 131073, 0, -65529, 131073, 0, 7, 131073, 0, 65543, 131073, 0, 131079, 131073, 0, 196614, 131073, 0, 196613, 131073, 0, -393217, 65537, 0, 196607, 65537, 0, 131071, 65537, 0, 65535, 65537, 0, -1, 65537, 0, -65537, 65537, 0, -131073, 65537, 0, -196609, 65537, 0, -262145, 65537, 0, -327681, 65537, 0, -458752, 65537, 0, -458751, 65537, 0, -458750, 65537, 0, -458749, 65537, 0, -458748, 65537, 0, -458747, 65537, 0, -458746, 65537, 0, 196612, 131073, 0, 196611, 131073, 0, 196610, 131073, 0, 196609, 131073, 0, 196608, 131073, 0, 262143, 65537, 0)

[node name="HighlightMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("3_ilats")
cell_quadrant_size = 64
format = 2
layer_0/y_sort_enabled = true
layer_0/z_index = 1
script = ExtResource("4_fv11e")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MoveService" type="Node2D" parent="."]
script = ExtResource("4_m8tdb")

[node name="ActionService" parent="." instance=ExtResource("7_psia6")]
position = Vector2(-576.348, -322.077)

[node name="TurnService" type="Node" parent="."]
script = ExtResource("8_5tca6")
